# SWE

./: .gitignore  CMakeLists.txt
geometry2d/: CMakeLists.txt
geometry2d/src/: point.cpp
test/: CMakeLists.txt  note_test_line_and_point.cpp
test/geometry2d/: angle_test.cpp  geo_compare_test.cpp  line_test.cpp  point_test.cpp  pose_test.cpp
util/: CMakeLists.txt
util/src/: compare.cpp
